--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,32 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.hello'
-version = '0.0.1-SNAPSHOT'
+subprojects {
+	compileJava {
+		sourceCompatibility = '17'
+		targetCompatibility = '17'
+	}
 
-java {
-	sourceCompatibility = '17'
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
+
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	}
 }
 
-repositories {
-	mavenCentral()
+bootRun {
+	enabled = false
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
+bootJar {
+	enabled = false
 }
