--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'my-pay'
 
 include 'api-gateway'
-include 'account'
-include 'auth'
+include 'account-service'
+include 'money-service'
