--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,2 +1,20 @@
-server:
-  port: 8000
+spring:
+  application:
+    name: api-gateway
+  cloud:
+    gateway:
+      routes:
+        - id: account-service
+          uri: http://localhost:9000/
+          predicates:
+            - Path=/account/**
+          filters:
+            - RewritePath=/account/?(?<segment>.*), /$\{segment}
+        - id: money-service
+          uri: http://localhost:10000/
+          predicates:
+            - Path=/money/**
+          filters:
+            - RewritePath=/money/?(?<segment>.*), /$\{segment}
+            - PreAuthGatewayFilter
+            - PostAuthGatewayFilter
