--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -1,2 +1,27 @@
 server:
   port: 9000
+
+spring:
+  application:
+    name: account-service
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #show_sql: true
+        format_sql: true
+        highlight_sql: true
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/mypay_account
+    username: myuser
+    password: P@ssw0rd
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+logging.level:
+  org.hibernate.SQL: debug
+  #org.hibernate.type: trace
+  org.hibernate.orm.jdbc.bind: trace
+  org.hibernate.orm.jdbc.extract: trace
