[#5] Transaction JPA 적용 및 MySQL 로컬 환경 연동

--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -1,2 +1,20 @@
 server:
   port: 10000
+
+spring:
+  application:
+    name: money-service
+
+  profiles:
+    active: local
+
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+        highlight_sql: true
+
+logging.level:
+  org.hibernate.SQL: debug
+  org.hibernate.orm.jdbc.bind: trace
+  org.hibernate.orm.jdbc.extract: trace
