--- a/money-service/build.gradle
+++ b/money-service/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.24.3'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
