--- a/money-service/src/main/resources/application-test.yml
+++ b/money-service/src/main/resources/application-test.yml
@@ -12,3 +12,8 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
+  redis:
+    data:
+      host: 127.0.0.1
+      port: 6379
