--- a/money-service/src/test/resources/application.yml
+++ b/money-service/src/test/resources/application.yml
@@ -5,6 +5,11 @@ spring:
         format_sql: true
         highlight_sql: true
 
+  redis:
+    data:
+      host: 127.0.0.1
+      port: 6379
+
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
