--- a/money-service/src/test/resources/application.yml
+++ b/money-service/src/test/resources/application.yml
@@ -5,6 +5,12 @@ spring:
         format_sql: true
         highlight_sql: true
 
+  web:
+    resources:
+      add-mappings: false
+  mvc:
+    throw-exception-if-no-handler-found: true
+
   redis:
     data:
       host: 127.0.0.1
