--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
         format_sql: true
         highlight_sql: true
 
+  web:
+    resources:
+      add-mappings: false
+  mvc:
+    throw-exception-if-no-handler-found: true
+
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
