--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 10000
-
 spring:
   application:
     name: money-service
@@ -18,3 +15,40 @@ logging.level:
   org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
   org.hibernate.orm.jdbc.extract: trace
+
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/mypay_money
+    username: myuser
+    password: P@ssw0rd
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  redis:
+    data:
+      host: 127.0.0.1
+      port: 6379
+
+app:
+  account-service-url: http://localhost:9000
+
+server:
+  port: 10000
+
+---
+spring:
+  config:
+    activate:
+      on-profile: development
+
+  jpa:
+    hibernate:
+      ddl-auto: update
