[#14] feat: 애플리케이션 모니터링을 위한 의존성 추가 및 actuator의 prometheus 엔드포인트 노출

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -22,6 +22,12 @@ logging.level:
   org.hibernate.orm.jdbc.bind: trace
   org.hibernate.orm.jdbc.extract: trace
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+
 ---
 spring:
   config:
