--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -23,13 +23,13 @@ spring:
         - id: account-service
           uri: http://localhost:9000/
           predicates:
-            - Path=/accounts/**
+            - Path=/accounts/**, /accounts/actuator/**
           filters:
             - RewritePath=/accounts/?(?<segment>.*), /$\{segment}
         - id: money-service
           uri: http://localhost:10000/
           predicates:
-            - Path=/money/docs/index.html, /money/health/ping
+            - Path=/money/docs/index.html, /money/health/ping, /money/actuator/**
             - Method=GET
           filters:
             - RewritePath=/money/?(?<segment>.*), /$\{segment}
