[#17] test: 부하테스트 스크립트 작성

--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -21,6 +21,8 @@ logging.level:
   org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
   org.hibernate.orm.jdbc.extract: trace
+  com.zaxxer.hikari.HikariConfig: debug
+  com.zaxxer.hikari: trace
 
 management:
   endpoints:
@@ -43,6 +45,8 @@ spring:
     username: myuser
     password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 20
 
   redis:
     data:
