--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -17,10 +17,15 @@ spring:
   mvc:
     throw-exception-if-no-handler-found: true
 
+  output:
+    ansi:
+      enabled: always
+
 logging.level:
-  org.hibernate.SQL: debug
-  org.hibernate.orm.jdbc.bind: trace
-  org.hibernate.orm.jdbc.extract: trace
+  #org.springframework.transaction.interceptor: trace
+  #org.hibernate.SQL: debug
+  #org.hibernate.orm.jdbc.bind: trace
+  #org.hibernate.orm.jdbc.extract: trace
   com.zaxxer.hikari.HikariConfig: debug
   com.zaxxer.hikari: trace
 
@@ -38,7 +43,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 
   datasource:
     url: jdbc:mysql://localhost:3306/mypay_money
@@ -47,6 +52,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 20
+      connection-timeout: 30000
+      #leak-detection-threshold: 2000
 
   redis:
     data:
@@ -67,4 +74,4 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
