--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -1,26 +1,15 @@
-buildscript {
-    ext {
-        set('springframeworkBootPlugin', Versions.SPRINGFRAMEWORK_BOOT_PLUGIN)
-        set('springDependencyManagementPlugin', Versions.SPRING_DEPENDENCY_MANAGEMENT_PLUGIN)
-        set('asciidoctorPlugin', Versions.ASCIIDOCTOR_PLUGIN)
-
-        set('javaVersion', Versions.JAVA)
-        set('guavaVersion', Versions.GUAVA)
-    }
-}
-
 plugins {
     id 'java'
-    id 'org.springframework.boot' version "$springframeworkBootPlugin"
-    id 'io.spring.dependency-management' version "$springDependencyManagementPlugin"
-    id "org.asciidoctor.jvm.convert" version "$asciidoctorPlugin"
+    alias(libs.plugins.springframework.boot)
+    alias(libs.plugins.spring.dependency.management)
+    alias(libs.plugins.asciidoctor)
 }
 
 group = 'com.hello.account'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = "${javaVersion}"
+    sourceCompatibility = "${libs.versions.java.get()}"
 }
 
 configurations {
@@ -40,7 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    implementation "com.google.guava:guava:${guavaVersion}"
+    implementation "com.google.guava:guava:${libs.versions.guava.get()}"
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
