--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
   mvc:
     throw-exception-if-no-handler-found: true
 
+  output:
+    ansi:
+      enabled: always
+
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.orm.jdbc.bind: trace
