--- a/money-service/build.gradle
+++ b/money-service/build.gradle
@@ -1,28 +1,15 @@
-buildscript {
-    ext {
-        set('springframeworkBootPlugin', Versions.SPRINGFRAMEWORK_BOOT_PLUGIN)
-        set('springDependencyManagementPlugin', Versions.SPRING_DEPENDENCY_MANAGEMENT_PLUGIN)
-        set('asciidoctorPlugin', Versions.ASCIIDOCTOR_PLUGIN)
-
-        set('javaVersion', Versions.JAVA)
-        set('guavaVersion', Versions.GUAVA)
-        set('redissonVersion', Versions.REDISSON)
-        set('mapstructVersion', Versions.MAPSTRUCT)
-    }
-}
-
 plugins {
     id 'java'
-    id 'org.springframework.boot' version "${springframeworkBootPlugin}"
-    id 'io.spring.dependency-management' version "${springDependencyManagementPlugin}"
-    id "org.asciidoctor.jvm.convert" version "${asciidoctorPlugin}"
+    alias(libs.plugins.springframework.boot)
+    alias(libs.plugins.spring.dependency.management)
+    alias(libs.plugins.asciidoctor)
 }
 
 group = 'com.hello.money'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = "${javaVersion}"
+    sourceCompatibility = "${libs.versions.java.get()}"
 }
 
 configurations {
@@ -43,19 +30,20 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    implementation "com.google.guava:guava:${guavaVersion}"
-    implementation "org.redisson:redisson-spring-boot-starter:${redissonVersion}"
+    implementation "com.google.guava:guava:${libs.versions.guava.get()}"
+    implementation "org.redisson:redisson-spring-boot-starter:${libs.versions.redisson.get()}"
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.76.Final:osx-aarch_64'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    implementation "org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured'
