--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ java = "17"
 springframeworkBoot = "3.1.3"
 springDependencyManagement = "1.1.3"
 asciidoctor = "3.3.2"
+jacoco = "0.8.11"
 
 guava = "31.1-jre"
 redisson = "3.26.0"
