--- a/money-service/build.gradle
+++ b/money-service/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
+
+    testImplementation 'com.github.codemonstur:embedded-redis:1.4.2'
 }
 
 ext {
