--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ springframeworkBoot = "3.1.3"
 springDependencyManagement = "1.1.3"
 asciidoctor = "3.3.2"
 jacoco = "0.8.11"
+restdocsApiSpec = "0.19.2"
 
 guava = "31.1-jre"
 redisson = "3.26.0"
@@ -17,6 +18,7 @@ springCloud = "2022.0.4"
 springframework-boot = { id = "org.springframework.boot", version.ref = "springframeworkBoot" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "springDependencyManagement" }
 asciidoctor = { id = "org.asciidoctor.jvm.convert", version.ref = "asciidoctor" }
+restdocsApiSpec = { id = "com.epages.restdocs-api-spec", version.ref = "restdocsApiSpec" }
 
 [bundles]
 
