--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 
   datasource:
     url: jdbc:mysql://localhost:3306/mypay_money
