--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     active: local
 
   jpa:
+#    open-in-view: false
     properties:
       hibernate:
         format_sql: true
@@ -22,10 +23,12 @@ spring:
       enabled: always
 
 logging.level:
-  #org.springframework.transaction.interceptor: trace
+#  root: debug
+  org.springframework.orm.jpa: debug
+  org.springframework.transaction.interceptor: trace
   org.hibernate.SQL: debug
-  org.hibernate.orm.jdbc.bind: trace
-  org.hibernate.orm.jdbc.extract: trace
+  #  org.hibernate.orm.jdbc.bind: trace
+  #  org.hibernate.orm.jdbc.extract: trace
   com.zaxxer.hikari.HikariConfig: debug
   com.zaxxer.hikari: trace
 
