[#20] fix: 부하테스트 시 데이터 정합성 불일치 문제 해결 - 2. osiv를 false로 설정해서 트랜잭션마다 새로운 영속성 컨텍스트에 참여한다.

--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active: local
 
   jpa:
-#    open-in-view: false
+    open-in-view: false
     properties:
       hibernate:
         format_sql: true
