블로그 내용 반영 - 4. Redisson을 활용한 분산락(feat. 멀티락)

--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -23,9 +23,8 @@ spring:
       enabled: always
 
 logging.level:
-#  root: debug
   org.springframework.orm.jpa: debug
-  org.springframework.transaction.interceptor: trace
+#  org.springframework.transaction.interceptor: trace
   org.hibernate.SQL: debug
   #  org.hibernate.orm.jdbc.bind: trace
   #  org.hibernate.orm.jdbc.extract: trace
