refactor: 분산락의 타임아웃 설정은 application.yml에서 관리 - AopForTransaction의 트랜잭션 타임아웃과 연관되어 있어서 빈 초기화 시 검증 로직 추가

--- a/money-service/src/main/resources/application.yml
+++ b/money-service/src/main/resources/application.yml
@@ -22,9 +22,15 @@ spring:
     ansi:
       enabled: always
 
+distributed:
+  lock:
+    wait-time: 30
+    lease-time: 5
+    time-unit: SECONDS
+
 logging.level:
   org.springframework.orm.jpa: debug
-#  org.springframework.transaction.interceptor: trace
+  #  org.springframework.transaction.interceptor: trace
   org.hibernate.SQL: debug
   #  org.hibernate.orm.jdbc.bind: trace
   #  org.hibernate.orm.jdbc.extract: trace
